#3 Integrate Ninja Character Plugin
Subclass from ninja character, supporting directional gravity

--- a/EchoesOfAcropolis.uproject
+++ b/EchoesOfAcropolis.uproject
@@ -7,7 +7,18 @@
 		{
 			"Name": "EchoesOfAcropolis",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"NinjaCharacter"
+			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "NinjaCharacter",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d91461c6f5544d118198d6acaddb48e8"
 		}
 	]
 }
