--- a/EchoesOfAcropolis.uproject
+++ b/EchoesOfAcropolis.uproject
@@ -21,9 +21,8 @@
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d91461c6f5544d118198d6acaddb48e8"
 		},
 		{
-			"Name": "BlockoutToolsPlugin",
-			"Enabled": true,
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d337b97aca8947a893526964e179acfd"
+			"Name": "HoudiniEngine",
+			"Enabled": true
 		}
 	]
 }
