--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/ThirdPersonCPP/Maps/Level_1_1.Level_1_1
+EditorStartupMap=/Game/ThirdPersonCPP/Maps/Level_1_1.Level_1_1
 GlobalDefaultGameMode="/Script/EchoesOfAcropolis.EchoesOfAcropolisGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
