Setting up Ability System Plugin, Initiating attribute set

--- a/EchoesOfAcropolis.uproject
+++ b/EchoesOfAcropolis.uproject
@@ -10,7 +10,8 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-				"NinjaCharacter"
+				"NinjaCharacter",
+				"GameplayAbilities"
 			]
 		}
 	],
@@ -24,6 +25,10 @@
 			"Name": "BlockoutToolsPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/d337b97aca8947a893526964e179acfd"
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
