--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/Level_1_1.Level_1_1
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/Level_1_1.Level_1_1
-GlobalDefaultGameMode="/Script/EchoesOfAcropolis.EchoesOfAcropolisGameMode"
+GlobalDefaultGameMode=/Game/Blueprint/Game/BP_EchoGameModeBase.BP_EchoGameModeBase_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
