Config dash vfx, add native gameplay tags

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,6 +17,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/EchoesOfAcropolis")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="EchoesOfAcropolisGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="EchoesOfAcropolisCharacter")
+AssetManagerClassName=/Script/EchoesOfAcropolis.EchoAssetManager
+
+
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
