Refractor Shooting Logic

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,3 +78,9 @@ AssetManagerClassName=/Script/EchoesOfAcropolis.EchoAssetManager
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/EchoesOfAcropolis.ICombatInterface.GetWeaponTargetingSourceLocation",NewName="/Script/EchoesOfAcropolis.ICombatInterface.GetCombatSocketLocation")
++FunctionRedirects=(OldName="/Script/EchoesOfAcropolis.EchoGameplayAbility_FromEquip.GetAssociatedEquipment",NewName="/Script/EchoesOfAcropolis.EchoGameplayAbility_FromEquip.GetAssociatedEquipmentInstance")
++ClassRedirects=(OldName="/Script/EchoesOfAcropolis.EchoShootingAbility",NewName="/Script/EchoesOfAcropolis.EchoGameplayAbility_RangedWeapon")
++PropertyRedirects=(OldName="/Script/EchoesOfAcropolis.EchoEquipmentDefinition.AbilitiesToGrant",NewName="/Script/EchoesOfAcropolis.EchoEquipmentDefinition.AbilitySetsToGrant")
