--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=148EF0AB422928D25AD0D884776F6C04
-ProjectName=Third Person Game Template
+ProjectName=Echo of Acropolis
+CopyrightNotice=Copyright Echo of Acropolis. All Rights Reserved.
+
