--- a/EchoesOfAcropolis.uproject
+++ b/EchoesOfAcropolis.uproject
@@ -12,7 +12,8 @@
 				"Engine",
 				"NinjaCharacter",
 				"GameplayAbilities",
-				"EnhancedInput"
+				"EnhancedInput",
+				"CoreUObject"
 			]
 		}
 	],
