Finishing touch of shooting and dashing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,3 +84,4 @@ AssetManagerClassName=/Script/EchoesOfAcropolis.EchoAssetManager
 +FunctionRedirects=(OldName="/Script/EchoesOfAcropolis.EchoGameplayAbility_FromEquip.GetAssociatedEquipment",NewName="/Script/EchoesOfAcropolis.EchoGameplayAbility_FromEquip.GetAssociatedEquipmentInstance")
 +ClassRedirects=(OldName="/Script/EchoesOfAcropolis.EchoShootingAbility",NewName="/Script/EchoesOfAcropolis.EchoGameplayAbility_RangedWeapon")
 +PropertyRedirects=(OldName="/Script/EchoesOfAcropolis.EchoEquipmentDefinition.AbilitiesToGrant",NewName="/Script/EchoesOfAcropolis.EchoEquipmentDefinition.AbilitySetsToGrant")
++FunctionRedirects=(OldName="/Script/EchoesOfAcropolis.EchoPlayer.SetDashingStatus",NewName="/Script/EchoesOfAcropolis.EchoPlayer.SetDashStatus")
